; ModuleID = '/home/carl/AnghaBench/vlc/src/posix/extr_thread.c_vlc_tick_sleep.c'
source_filename = "/home/carl/AnghaBench/vlc/src/posix/extr_thread.c_vlc_tick_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32 }

@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@EINTR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_tick_sleep(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.timespec, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @timespec_from_vlc_tick(i32 %4)
  %6 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 0
  store i32 %5, i32* %6, align 4
  br label %7

7:                                                ; preds = %12, %1
  %8 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %9 = call i64 @clock_nanosleep(i32 %8, i32 0, %struct.timespec* %3, %struct.timespec* %3)
  %10 = load i64, i64* @EINTR, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %7
  br label %7

13:                                               ; preds = %7
  ret void
}

declare dso_local i32 @timespec_from_vlc_tick(i32) #1

declare dso_local i64 @clock_nanosleep(i32, i32, %struct.timespec*, %struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
